dark mode fix

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,6 @@
     height: 100vh;
     width: auto;
     font-size: 1.5rem;
-    color: black;
 }
 
 .demo {
@@ -22,7 +21,6 @@
     position: absolute;
     width: 0.3ch;
     height: 1.5rem;
-    background-color: #ffff;
     transform: translate(0.5ch, 2px);
     animation: caret 0.875s ease-in forwards infinite;
 }
