--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -8,7 +8,6 @@ a{
     position: relative;
     letter-spacing: 0.5px;
     text-decoration: none;
-    color: rgba(0,0,0,.4);
     z-index: 1;
 }
 
